# hello-cmake

./: .gitignore  .gitmodules  CMakeLists.txt  hello-string1.cmake  readme.md
hello/: readme.sh
hello/dll/dll1/: dll1.cpp  dll1.h  main.cpp
hello/independent/hello1/: CMakeLists.txt  main.cpp
hello/independent/hello1/doc/: doc1.hpp
hello/linear_regression/: linear_regression.cpp
hello/musc/mult1/sample1/sample11/: samplea.cpp  samplea.h
hello/musc/mult1/sample1/sample12/: main.cpp
hello/python/: callpython.sh
hello/python/callpython3/: main.cpp
hello/python/cxpython1/: CMakeLists.txt  cxpython1.cmake
hello1/: CMakeLists.txt  main.cpp
hello1/module/: module1.hpp
hello1/module/sub1/: sub11.hpp  sub12.hpp
hello2/: CMakeLists.txt
hello2/sample1/sample11/: main.cpp
hello2/sample2/: main.cpp
man/: a.cpp  cmake.sh  find_package.sh  functions.md  python-paths.py
man/documentation/: cmake-commands(7).md  cmake-developer(7).md  cmake-documentation.md  cmake-env-variables(7).md  cmake-modules(7).md  cmake-policies(7).md  cmake-properties(7).md  cmake-variables(7).md  readme.md
modules/: FindFFMPEG.cmake
